<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.HomeActivity">

    <com.jeremy.bannerview.BannerView
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:visibility="gone"/>

    <!--<android.support.v7.widget.RecyclerView-->
        <!--android:id="@+id/recycler_view"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent" />-->

    <com.jeremy.library.recycler_view.CommonRecyclerView
        android:id="@+id/common_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
